--- a/public/addworkout.html
+++ b/public/addworkout.html
@@ -173,7 +173,7 @@
                 var filenames = await getWeekCsvFiles();
                 console.log("Existing files:", filenames);
 
-                // todo: get from config
+                // todo: get from config. or make the router never change this lol
                 const serverURL = 'http://192.168.1.222:3000';
                 
                 // Check if the filename is not listed in index.txt
